--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <nav style="height: 100vh; padding: 1rem; width: 200px">
-      <a href="/">Clear Message</a>
+      <a href="/kartu">Clear Message</a>
       <button id="tw" class="button tw" data-sharer="twitter" data-hashtags="KedokteranRuangGuru #Card">Share on Twitter</button>
     </nav>
     <div id="output"></div>
